# minimal-cmake-emscripten-project

./: .gitignore  CMakeLists.txt  README.md
assets/: testfile.frag  testfile.vert
build.emscripten/: index-manual.html  index.html
src/: Application.cpp  Application.h
